--- a/charts/mgt-cluster/config_linting.yaml
+++ b/charts/mgt-cluster/config_linting.yaml
@@ -6,6 +6,19 @@ hCloud:
   networking:
     servicesIpv4Cidr: "10.1.8.0/21"
     podsIpv4Cidr: "10.1.16.0/20"
+    region: "fsn1"
+  machines:
+    cp:
+      # type: "cpx32"
+      # osVersion: "2404"
+      # k8sVersion: "v1.31.4"
+      buildTimestamp: "1744781328"
+      # replicas: 3
+    worker:
+      # type: "cpx42"
+      # osVersion: "2404"
+      # k8sVersion: "v1.31.4"
+      buildTimestamp: "1744781328"
 
 install:
   envName: prod
