--- a/charts/workload-cluster/values.yaml
+++ b/charts/workload-cluster/values.yaml
@@ -274,16 +274,16 @@ install:
   resources:
     # Update CoreDNS config to use our PowerDNS in `capi-mgt` cluster.
     # Note that here we get IP of PowerDNS recursor server initially from `capi-mgt` cluster.
-    41-bootstrap-configs:
+    41-cluster-bootstrap-configs:
       enabled: true
       strategy: Reconcile
       repoUrl: https://gitlab.com/api/v4/projects/65336103/packages/helm/stable
       repoCreds:
         username: "$(kubectl get secret -n argocd repo-charts -o jsonpath='{.data.username}' | base64 -d)"
         password: "$(kubectl get secret -n argocd repo-charts -o jsonpath='{.data.password}' | base64 -d)"
-      chart: bootstrap-configs
+      chart: cluster-bootstrap-configs
       createNamespace: false
-      releaseName: bootstrap-configs
+      releaseName: cluster-bootstrap-configs
       version: 0.3.2
       namespace: kube-system
       values: |-
