--- a/charts/management-cluster/values.yaml
+++ b/charts/management-cluster/values.yaml
@@ -287,7 +287,7 @@ install:
       chart: cluster-bootstrap-configs
       createNamespace: false
       releaseName: cluster-bootstrap-configs
-      version: 0.3.2
+      version: 0.4.0-rc.1
       namespace: kube-system
       values: |-
         customDnsIp: "$(kubectl get -n kube-system cm custom-dns -o jsonpath='{.data.PDNS_RECURSOR_IP}')"
@@ -322,7 +322,7 @@ install:
       chart: eso-providers
       createNamespace: false
       releaseName: eso-providers
-      version: 1.4.0
+      version: 1.5.0-rc.1
       namespace: eso-providers
       values: |-
         # This will also create a Secret to store this credentials.
@@ -392,7 +392,7 @@ install:
       chart: eso-secrets
       createNamespace: true
       releaseName: eso-secrets
-      version: 0.4.0
+      version: 0.5.0-rc.1
       namespace: eso-secrets
       values: |-
         externalSecrets:
