--- a/charts/workload-cluster/values.yaml
+++ b/charts/workload-cluster/values.yaml
@@ -284,7 +284,7 @@ install:
       chart: cluster-bootstrap-configs
       createNamespace: false
       releaseName: cluster-bootstrap-configs
-      version: 0.3.2
+      version: 0.4.0-rc.1
       namespace: kube-system
       values: |-
         customDnsIp: "$(kubectl get -n kube-system cm custom-dns -o jsonpath='{.data.PDNS_RECURSOR_IP}')"
@@ -317,7 +317,7 @@ install:
       chart: eso-providers
       createNamespace: false
       releaseName: eso-providers
-      version: 1.4.0
+      version: 1.5.0-rc.1
       namespace: eso-providers
       values: |-
         # This will also create a Secret to store this credentials.
@@ -382,7 +382,7 @@ install:
       chart: eso-secrets
       createNamespace: true
       releaseName: eso-secrets
-      version: 0.4.0
+      version: 0.5.0-rc.1
       namespace: eso-secrets
       values: |-
         externalSecrets:
