--- a/charts/helpers/eso-providers/Chart.yaml
+++ b/charts/helpers/eso-providers/Chart.yaml
@@ -3,5 +3,5 @@ apiVersion: v2
 name: eso-providers
 description: A Helm chart for External Secrets Operator providers
 type: application
-version: 1.5.0-rc.5
+version: 1.5.0
 # appVersion: "1.16.0"
