--- a/charts/helpers/eso-secrets/Chart.yaml
+++ b/charts/helpers/eso-secrets/Chart.yaml
@@ -3,5 +3,5 @@ apiVersion: v2
 name: eso-secrets
 description: A Helm chart for external secrets
 type: application
-version: 0.5.0-rc.5
+version: 0.5.0
 # appVersion: "1.16.0"
