--- a/charts/workload-cluster/Chart.yaml
+++ b/charts/workload-cluster/Chart.yaml
@@ -3,10 +3,10 @@ apiVersion: v2
 name: workload-cluster
 description: An umbrella chart for a workload (k8s) cluster.
 type: application
-version: 0.10.0-rc.5
+version: 0.10.0
 dependencies:
 - name: cluster
-  version: 0.10.0-rc.5
+  version: 0.10.0
   # repository: https://gitlab.com/api/v4/projects/65336103/packages/helm/stable
   repository: file://../cluster
   import-values:
